# palm

./: .gitignore  .vault-program-id  Anchor.toml  README.md  package-lock.json  package.json  skills-lock.json  tsconfig.json
.agents/skills/magicblock/: SKILL.md  delegation.md  ephemeral-spl-token.md  lamports-topup.md  resources.md  typescript-setup.md  vrf.md
.claude/: settings.local.json
app/: App.tsx  README.md  app.config.js  app.json  index.ts  metro.config.js  package-lock.json  package.json  polyfills.ts  tsconfig.json
app/src/: deployment.json  theme.ts
app/src/components/: haven.tsx  icons.tsx  palm.tsx  ui.tsx
app/src/constants/: app-config.ts
app/src/context/: ClusterContext.tsx  WalletContext.tsx
app/src/hooks/: useSolanaData.ts
app/src/idl/: vault.json
app/src/lib/: actions.ts  activity.ts  apiSession.ts  borsh.ts  buffer.ts  chain.ts  (+14 more)
backend/: .env.example  README.md  package.json  tsconfig.json
backend/src/: index.ts  messages.ts  pusher.ts  registry.ts  server.ts  validation.ts
backend/test/: messages.test.ts  server.test.ts
docs/: PRIVACY.md  architecture.md  spikes.md  status.md
e2e/: privacy-tests.ts  program-tests.ts
e2e/scenarios/: _shared.ts  e2e-1-transfer.ts  e2e-2-vault.ts  e2e-3-swap.ts  e2e-4-request.ts  e2e-5-approval.ts  e2e-6-escape-hatch.ts
e2e/setup/: create-test-mint.ts
e2e/spikes/: s2-payments-loop.ts  s5-swap.ts
programs/vault/: Cargo.toml
programs/vault/src/: errors.rs  lib.rs  policy.rs  state.rs
shared/: constants.ts  payments.ts  solana.ts  swap.ts  tee.ts  vault.ts
shared/idl/: vault.json
(+12 files in other folders)
